--- a/index.html
+++ b/index.html
@@ -20,9 +20,18 @@ Lists of extracurriculars
  Email address: priyankari099@gmail.com -->
 
  <!DOCTYPE html>
+<html lang="en">
 <html>
   <head>
-
+    <link rel="stylesheet" href="https://cdn.rawgit.com/openlayers/openlayers.github.io/master/en/v5.3.0/css/ol.css" type="text/css">
+  <style>
+    .map {
+      height: 400px;
+      width: 100%;
+    }
+  </style>
+  <script src="https://cdn.rawgit.com/openlayers/openlayers.github.io/master/en/v5.3.0/build/ol.js"></script>
+  <title>OpenLayers example</title>
     <script src = "javascrpit.js"></script>
     <center>
     <font color="saddlebrown">
@@ -35,6 +44,24 @@ Lists of extracurriculars
 
   </head>
   <body>
+    <h2>My Map</h2>
+    <div id="map" class="map"></div>
+    <script type="text/javascript">
+      var map = new ol.Map({
+        target: 'map',
+        layers: [
+          new ol.layer.Tile({
+            source: new ol.source.OSM()
+          })
+        ],
+        view: new ol.View({
+          center: ol.proj.fromLonLat([37.41, 8.82]),
+          zoom: 4
+        })
+      });
+    </script>
+  </body>
+</html>
     <button> CLick ME!</button>
 
 
