--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ Lists of extracurriculars
 
 
     <button onclick = "document.getElementById('myImage').src= 'light_on.png'">Turn on the light</button>
-    <img id="myImage"src="light_off.png"style="width:100px">
+  <p>  <img id="myImage"src="light_off.png"style="width:100px"></p>
     <button onclick = "document.getElementById('myImage').src= 'light_off.png'">Turn off the light</button>
   <font color="chocolate">
   <p>  I’m a high school student with a passion for engineering and design!  <p>
