--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ Lists of extracurriculars
       });
       // <button onclick = "'">priyankari099@gmail.com</button>
     </script>
-    <button onclick = "'">Click this</button>
+    <button onclick = "'">Click this to go to your location.</button>
   </body>
 </html>
     <button> CLick ME!</button>
