--- a/index.html
+++ b/index.html
@@ -62,6 +62,15 @@ Lists of extracurriculars
       // <button onclick = "'">priyankari099@gmail.com</button>
     </script>
     <button onclick = "'">Click this to go to your location.</button>
+    <script>
+    function panHome() {
+      view.animate({
+        center: london,
+        duration: 2000
+    </script>
+      });
+    }
+
   </body>
 </html>
     <button> CLick ME!</button>
