--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@ Lists of extracurriculars
     </script>
       });
     }
+  <button onclick = "'">Click this to go to your location.</button>
 
   </body>
 </html>
