--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@ Lists of extracurriculars
 <html lang="en">
 <html>
   <head>
+    <script async src = "javascrpit.js"></script>
     <link rel="stylesheet" href="https://cdn.rawgit.com/openlayers/openlayers.github.io/master/en/v5.3.0/css/ol.css" type="text/css">
   <style>
     .map {
