--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@ Lists of extracurriculars
       height: 400px;
       width: 100%;
     }
+
+
+
+
+
   </style>
   <script src="https://cdn.rawgit.com/openlayers/openlayers.github.io/master/en/v5.3.0/build/ol.js"></script>
   <title>OpenLayers example</title>
@@ -42,6 +47,11 @@ Lists of extracurriculars
     <img src = "https://images.unsplash.com/photo-1559962956-34e40045254f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=900&q=60" style="width:350px;height:220px;" />
   <p>  <h1>--- Priyanka Tadepalli --- </h1><p>
     </center>
+
+
+
+
+
 
   </head>
   <body>
@@ -62,10 +72,17 @@ Lists of extracurriculars
       });
       // <button onclick = "'">priyankari099@gmail.com</button>
     </script>
-      <button onclick = "'">Click this to go to your location.</button>
+    <p>
+      <button onclick = "panHome()">Click this to pan back</button>
+    <div> id ="map" class="map"></div>
+      <p>
   </body>
 </html>
-    <button> CLick ME!</button>
+
+
+
+
+
 
 
 
