--- a/index.html
+++ b/index.html
@@ -32,9 +32,6 @@ Lists of extracurriculars
     }
 
 
-
-
-
   </style>
   <script src="https://cdn.rawgit.com/openlayers/openlayers.github.io/master/en/v5.3.0/build/ol.js"></script>
   <title>OpenLayers example</title>
@@ -45,44 +42,19 @@ Lists of extracurriculars
     <img src = "https://images.unsplash.com/photo-1562663474-6cbb3eaa4d14?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=900&q=60"style="width:350px;height:220px;" />
     <img src ="https://images.unsplash.com/photo-1493020258366-be3ead1b3027?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=900&q=60"style="width:350px;height:220px;" />
     <img src = "https://images.unsplash.com/photo-1559962956-34e40045254f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=900&q=60" style="width:350px;height:220px;" />
-  <p>  <h1>--- Priyanka Tadepalli --- </h1><p>
+  <p>  <h1> --- Priyanka Tadepalli --- </h1><p>
     </center>
-
-
-
-
 
 
   </head>
   <body>
-    <h2>My Map</h2>
-    <div id="map" class="map"></div>
-    <script type="text/javascript">
-      var map = new ol.Map({
-        target: 'map',
-        layers: [
-          new ol.layer.Tile({
-            source: new ol.source.OSM()
-          })
-        ],
-        view: new ol.View({
-          center: ol.proj.fromLonLat([37.41, 8.82]),
-          zoom: 4
-        })
-      });
-      // <button onclick = "'">priyankari099@gmail.com</button>
-    </script>
+
+      <button onclick = "'">priyankari099@gmail.com</button>
+    <!-- </script> -->
     <p>
       <button onclick = "panHome()">Click this to pan back</button>
-    <div> id ="map" class="map"></div>
-      <p>
-  </body>
-</html>
 
-
-
-
-
+    <div id ="map" class="map"> </div>
 
 
 
@@ -137,7 +109,7 @@ Click me to display Date and Time.</button>
       background-color:white;
     }
   </style>
-  <link
+  <!-- <link
   rel="stylesheet"
-  href= "website.css">
+  href= "website.css"> -->
 </html>
